@@ -3,6 +3,10 @@ X3 ChangeLog
 
 2009-10-06  Henrik Stuart <evilnet@hstuart.dk>
 
+	* src/mod-python.c: add emb_kill function.
+
+2009-10-06  Henrik Stuart <evilnet@hstuart.dk>
+
 	* src/mod-python.c: improve error logic for pyobj_from_usernode.
 
 2009-10-06  Henrik Stuart <evilnet@hstuart.dk>
